测试dragonwell虚拟机协程功能